# AutoSetWallpaperOnDesktop

./: CMakeLists.txt  main.cpp
src/: main.cpp
